--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+     <uses-permission android:name="android.permission.CALL_PHONE" />         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <permission
         android:name="com.shubham.thunderquake.permission.MAPS_RECEIVE"
@@ -25,10 +25,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
       <activity
-            android:name="com.shubham.thunderquake.QuakeActivity"
+            android:name="com.shubham.thunderquake.Welcome"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -55,6 +55,7 @@
         <activity
             android:name="com.shubham.thunderquake.DosDonts"
             android:label="Do's And Dont's"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -64,6 +65,16 @@
         <activity
             android:name="com.shubham.thunderquake.Contact"
             android:label="Contacts"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.shubham.thunderquake.QuakeActivity" />
+        </activity>
+        <activity
+            android:name="com.shubham.thunderquake.Intro"
+            android:label="What is it?"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -73,6 +84,7 @@
         <activity
             android:name="com.shubham.thunderquake.SettingsActivity"
             android:label="@string/settings_menu_item"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -89,11 +101,18 @@
         <activity
             android:name="com.shubham.thunderquake.MapsActivity"
             android:label="Thunderquake Map"
+            android:theme="@style/AppTheme"
             android:parentActivityName="com.shubham.thunderquake.QuakeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.shubham.thunderquake.QuakeActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait" />
         <activity
             android:name="com.shubham.thunderquake.About"
             android:label="About"
+            android:theme="@style/AppTheme"
             android:parentActivityName="com.shubham.thunderquake.QuakeActivity"
             android:screenOrientation="portrait" />
 
